# Blend-Vault

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING_SUMMARY.md  TEST_RESULTS.md  compoundError.xdr  deploy.sh  deployment_2025-11-07T142025Z.txt  deployment_2025-11-07T182627Z.txt  deployment_2025-11-08T102100Z.txt  deployment_2025-11-10T083757Z.txt  deployment_2025-11-12T053757Z.txt  deployment_2025-11-12T114809Z.txt  deployment_2025-11-13T101055Z.txt
.cargo/: config.toml
.claude/: settings.local.json
.stellar/network/: mainnet.toml
contracts/: Cargo.toml
contracts/src/: lib.rs  lib.rs.backup  test.rs
contracts/src/mocks/: contracts.rs  mod.rs  simple_mocks.rs  testutils.rs
contracts/test_artifacts/: README.md  comet_pool.wasm
docs/: index.html
docs/assets/: index-5izC8t5I.css  index-8718sPoc.css  index-B1ZDG4kM.js  index-CKEBx_0J.js  index-Cfj3-oJ3.js  index-Cr99CEyR.js  index-DFLA-36v.js  index-DVy-WiwJ.js  index-DaKPUCEt.js  index-E1MLUw6o.js  index-lcC4Yipy.js  index-z0bSW71X.js
frontend/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ActionButton.css  ActionButton.tsx  BalanceDisplay.css  BalanceDisplay.tsx  ConnectButton.css  ConnectButton.tsx  StatsBar.css  StatsBar.tsx  VaultInterface.css  VaultInterface.tsx
frontend/src/contracts/: usdc.ts  vault.ts
frontend/src/hooks/: useBlendMetrics.ts  useVaultRewards.ts
frontend/src/types/: index.ts
frontend/src/utils/: blend.ts  format.ts  stellar.ts
prompts/: 0x01-initial-contract.md  0x02-compounding.md  0x03-unit-tests.md  0x04-events.md  0x05-frontend.md  0x06-authbug.md  0x07-styling.md  0x08-collateralbug.md  0x09-wasmmocks.md  0x10-testtimeouts.md  0x11-cometcompound.md  0x12-estSupplyApy.md  0x13-compoundBug.md
scripts/: diagnose-shares.js  package.json  test-balance.js  test-blend-position.js  test-decimals.js  test-init-state.js  test-max-redeem.js  test-vault-state.js
