[workspace]
members = ["contracts"]
resolver = "2"

[workspace.dependencies]
soroban-sdk = "23.1.0"
sep-41-token = "1.3.1"
stellar-tokens = "0.5.1"
stellar-access = "0.5.1"
stellar-contract-utils = "0.5.1"
stellar-macros = "0.5.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
