[package]
name = "blend-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.1.0"
sep-41-token = "1.3.1"
stellar-tokens = "0.5.0"
stellar-access = "0.5.0"
stellar-contract-utils = "0.5.0"
stellar-macros = "0.5.0"

[dev-dependencies]
soroban-sdk = { version = "23.1.0", features = ["testutils"] }
sep-41-token = { version = "1.3.1", features = ["testutils"] }
stellar-tokens = "0.5.0"
stellar-access = "0.5.0"
stellar-contract-utils = "0.5.0"
stellar-macros = "0.5.0"
blend-contract-sdk = { git = "https://github.com/kalepail/blend-contract-sdk", features = ["testutils"] }
soroban-fixed-point-math = { git = "https://github.com/kalepail/soroban-fixed-point-math" }

[package.metadata.cargo-test]
test-timeout = 300

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true